--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 <body>
     
-<div class="central_container">
+<div class="container">
     
 
     <div class="header">  <div id="pageup"> </div> </div>
@@ -62,3 +62,4 @@
 there is a checkbox<input type="checkbox">
 -->
   
+
